# sUSDPegCockpit

./: .gitignore  Dockerfile.landing  README.md  docker-compose.yml  package-lock.json  package.json
.github/: README.md
.github/workflows/: collectors.yml
execution/client/: index.html  package.json  tailwind.config.js  vite.config.js  vite.config.ts
execution/client/src/: App.tsx  index.css  types.ts
execution/client/src/components/: ChartFrame.tsx  FreshnessBadge.tsx  GoToTopButton.tsx  Icons.tsx  InfoPopover.tsx  KpiCard.tsx  StagingBanner.tsx
execution/client/src/lib/: format.ts  snapshots.ts
execution/client/src/panels/: CapitalFlow.tsx  (+10 more)
execution/pipeline/: .env.example  .gitignore  README.md  pyproject.toml
execution/pipeline/collectors/: flow.py  nft_queue.py  peg.py  pool_420.py  radar.py  recovery_score.py  scorecard.py  supply.py  trade_flow.py  yield_compare.py
execution/pipeline/lib/: config.py  etherscan.py  http.py  rpc.py  snapshot.py  subgraph.py
execution/pipeline/schemas/: flow.py  nft_queue.py  peg.py  pool_420.py  radar.py  recovery_score.py  scorecard.py  supply.py  trade_flow.py  yield_compare.py
execution/pipeline/scripts/: probe_council_value.py  run_all.py
execution/pipeline/tests/: test_config.py  test_flow_schema.py  test_nft_queue_schema.py  test_peg_schema.py  test_pool_420_schema.py  test_radar_schema.py  test_recovery_score_schema.py  test_scorecard_schema.py  test_subgraph.py  test_supply_schema.py  test_trade_flow_schema.py  test_yield_schema.py
execution/server/: package.json
execution/shared/: package.json
(+10 files in other folders)
